# adventofcode

./: .gitignore  LICENSE  README.md  setup.sh  today
.github/workflows/: rust.yml
2017/day1/: day1.py  day1_test.py
2017/day3/: day3.py  day3_test.py
2017/day4/: day4_test.py
2018/day1/: solution.py
2018/day3/: solution.py
2018/day4/: solution.py
2019/: README.md
2019/day01/: solution01.nim
2019/day02/: solution02.nim
2019/day04/: solution04.nim
2019/day05/: solution05.nim
2020/day_02/: main.jl
2020/day_03/: main.jl
2020/day_04/: main.jl
2020/day_06/: main.jl
2020/day_11/: main.jl
2020/day_12/: main.jl
2020/day_14/: main.jl
2021/: Cargo.toml
2022/: Cargo.toml
2022/src/: lib.rs  main.rs
2023/: pyproject.toml
2023/solutions/: config.py  day01.py  day02.py  day04.py  day06.py  main.py
day02/: day02.nim
day02/tests/: partA.nim
day03/: solution03.nim
day05/tests/: intcode  intcode.nim
day08/: solution08.nim
day2/: day2.py  solutions.py
day3/: day3.py
day4/: day4.py
day5/: day5.py  solution.py
day6/: day6.py
day8/: day8.py
day_01/: main.jl
day_01/src/: main.rs
day_02/src/: main.rs
day_03/src/: main.rs
day_04/src/: main.rs
day_05/: main.jl
day_05/src/: main.rs
day_06/src/: main.rs
day_07/: main.jl
day_07/src/: main.rs
day_08/: Cargo.toml  main.jl
day_08/src/: main.rs
day_09/: main.jl
day_09/src/: main.rs
day_10/: main.jl
day_10/src/: main.rs
day_11/: test2.txt
day_12/src/: main.rs
day_13/: main.jl
day_14/: main.jl
day_15/: Cargo.toml
src/: lib.rs  main.rs
(+60 files in other folders)
