[tool.poetry]
name = "advent of code 2023"
version = "1.0.0"
description = "Personal solutions for the Advent of Code 2023"
authors = ["Gilles Magalhaes <gilles.magalhaes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
